# msse_omp_mergesort

./: CMakeLists.txt  README.md  build_image.bat  build_image.sh  interactive.bat  interactive.sh
.github/workflows/: main.yml
src/: main.cpp
